# chess-game-haskell

./: .gitignore  README.md
chess/: CHANGELOG.md  chess.cabal
chess/app/: Check.hs  Client.hs  Host.hs  Main.hs  Piece.hs  Server.hs  Test.hs  TestData.hs  Types.hs  UI.hs  ValidateMove.hs
chess/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
