cabal-version:       2.4
name:                chess
version:             0.1.0.0
synopsis:            CSE 230 Project - Chess TUI
license:             MIT
license-file:        LICENSE
author:              Yatharth Vyas, Nimit Vasavat, Mohammed Anas
maintainer:          y1vyas@ucsd.edu
category:            Game
build-type:          Simple
extra-source-files:  README.md

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md


executable chess
    main-is:          Main.hs
    ghc-options:         -threaded
    other-modules:  Types,
                    TestData,
                    Piece,
                    ValidateMove,
                    UI,
                    Host,
                    Client,
                    Check

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:  base ,
                    bytestring,
                    tasty,
                    tasty-hunit,
                    QuickCheck,
                    brick,
                    vty ,
                    network,
                    containers ,
                    text ,
                    microlens >= 0.3.0.0,
                    microlens-th,
                    microlens-mtl,
                    mtl,
                    template-haskell,
                    split

    hs-source-dirs:   app
    default-language: Haskell2010


test-suite chess-test
  type:             exitcode-stdio-1.0
  hs-source-dirs:   app
  Default-Extensions: OverloadedStrings
  main-is:          Test.hs
  build-depends:    base,
                    bytestring,
                    QuickCheck,
                    tasty,
                    tasty-hunit,
                    tasty-quickcheck,
                    QuickCheck,
                    brick,
                    vty ,
                    network,
                    containers ,
                    text ,
                    microlens >= 0.3.0.0,
                    microlens-th,
                    microlens-mtl,
                    mtl,
                    template-haskell,
                    process
  other-modules:  Types,
                  TestData,
                  Piece,
                  ValidateMove,
                  UI
